--- a/login.html
+++ b/login.html
@@ -2,17 +2,16 @@
 <html>
 
 <style>
-body{background-color: purple;}
+body{background-color: purple;
+	margin-left: auto;
+    	margin-right: auto;
+        max-width: fit-content;}
 
 h2 {background-color: green;
-      margin-left: 600px;
-      margin-right: 655px;
       color: navy;
 }
 
 form {background-color: green;
-margin-left: 600px;
-margin-right: 650px;
 }
 
 </style>
@@ -23,7 +22,7 @@ margin-right: 650px;
 	<body>
  
  
- 	<h2>                                         Sign Up Form</h2>
+ 	<h2>Sign Up Form</h2>
  
  <form>
    <table>
